; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Mupen64Plus/png/contrib/libtests/extr_fakepng.c_main.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Mupen64Plus/png/contrib/libtests/extr_fakepng.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@signature = common dso_local global i32 0, align 4
@stdout = common dso_local global i32 0, align 4
@IHDR = common dso_local global i32 0, align 4
@unknown = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main() #0 {
  %1 = alloca i32, align 4
  store i32 0, i32* %1, align 4
  %2 = load i32, i32* @signature, align 4
  %3 = load i32, i32* @stdout, align 4
  %4 = call i32 @fwrite(i32 %2, i32 4, i32 1, i32 %3)
  %5 = load i32, i32* @IHDR, align 4
  %6 = call i32 @put_chunk(i32 %5, i32 4)
  br label %7

7:                                                ; preds = %7, %0
  %8 = load i32, i32* @unknown, align 4
  %9 = call i32 @put_chunk(i32 %8, i32 4)
  br label %7
}

declare dso_local i32 @fwrite(i32, i32, i32, i32) #1

declare dso_local i32 @put_chunk(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
